--- a/app/public/report.html
+++ b/app/public/report.html
@@ -62,8 +62,8 @@
               </select>
           <br>
 
-            <table class="table table-striped" id='stationNumTable'>
-              <thead>
+            <table class="table" id='stationNumTable'>
+              <thead class="thead-dark">
                 <tr>
                   <th>Station Number</th>
                   <th>Name</th>
@@ -92,8 +92,8 @@
               </select>
           <br>
 
-            <table class="table table-striped" id='radioNumTable'>
-              <thead>
+            <table class="table" id='radioNumTable'>
+              <thead class="thead-dark">
                 <tr>
                   <th> Radio Number </th>
                   <th>Name</th>
@@ -123,8 +123,8 @@
               </select>
           <br>
 
-            <table class="table table-striped" id='expiredCertTable'>
-              <thead>
+            <table class="table" id='expiredCertTable'>
+              <thead class="thead-dark">
                 <tr>
                   <th>Name</th>
                   <th>Cert Name</th>
@@ -153,7 +153,7 @@
         <p>Conditions of Use
           <span>&#47;</span> Privacy Notice
           <span>&#47;</span> Interest-Based Ads
-          <span>&#47;</span> © 2020, Briley Kim
+          <span>&#47;</span> © 2020, OCFR
         </p>
       </center>
     </div>
