Finished major components for Member and Cert page

--- a/app/public/cert.html
+++ b/app/public/cert.html
@@ -88,33 +88,33 @@
       <div class="col-7">
         <h4> Details</h4>
         <h5>Basic Information</h5>
-        <div>
+        <form method="post" v-on:submit.prevent="updateCert()">
           <div class="form-group row">
             <label class="col-sm-2 col-form-label">Certification Name:</label>
             <div class="col-sm-10">
-              <input class="form-control" type="text" ref="certName" :value="selectedCert.certName" :disabled="!isEditing" :class="{view: !isEditing}">
+              <input class="form-control" type="text" ref="certName" :value="selectedCert.certName" :disabled="!isEditing" :class="{view: !isEditing}" v-model="selectedCert.certName">
             </div>
           </div>
           <div class="form-group row">
             <label class="col-sm-2 col-form-label">Certification Agency:</label>
             <div class="col-sm-10">
-              <input class="form-control" type="text" ref="certAgency" :value="selectedCert.certAgency" :disabled="!isEditing" :class="{view: !isEditing}">
+              <input class="form-control" type="text" ref="certAgency" :value="selectedCert.certAgency" :disabled="!isEditing" :class="{view: !isEditing}" v-model="selectedCert.certAgency">
             </div>
           </div>
           <div class="form-group row">
             <label class="col-sm-2 col-form-label">Standard Expiry:</label>
             <div class="col-sm-10">
-              <input class="form-control" type="text" ref="standardExpiry" :value="selectedCert.standardExpiry" :disabled="!isEditing" :class="{view: !isEditing}">
+              <input class="form-control" type="text" ref="standardExpiry" :value="selectedCert.standardExpiry" :disabled="!isEditing" :class="{view: !isEditing}" v-model="selectedCert.standardExpiry">
             </div>
           </div>
-            <button type="button" class="btn btn-info" v-on:click="isEditing = !isEditing" v-if="!isEditing">
-              Edit
-            </button>
-          <button type="buttom" class="btn btn-info" v-on:click="save" v-else-if="isEditing">
+          <button type="button" class="btn btn-info" v-on:click.prevent="isEditing = !isEditing" v-if="!isEditing" v-model="selectedCert.certName">
+            Edit
+          </button>
+          <button type="submit" class="btn btn-info" v-else-if="isEditing">
             Save
           </button>
-            <button type="button" class="btn btn-secondary" v-if="isEditing" v-on:click="isEditing = false">Cancel</button>
-        </div>
+            <button type="button" class="btn btn-secondary" v-if="isEditing" v-on:click.prevent="isEditing = false">Cancel</button>
+          </form>
 
         <!-- <br><form>
           <div class="comment">
