--- a/app/public/member.html
+++ b/app/public/member.html
@@ -130,7 +130,7 @@
       <div class="col-7">
         <h4> Details</h4>
         <h5>Basic Information</h5>
-        <form method="post" v-on:submit.prevent="save()">
+        <form method="post" v-on:submit.prevent="updateInfo()">
         <div class="form-group row">
           <label class="col-sm-2 col-form-label">First Name:</label>
           <div class="col-sm-4">
