--- a/app/public/cert.html
+++ b/app/public/cert.html
@@ -80,6 +80,46 @@
               </div><br>
                 <input type="submit" value="Submit" class="button" v-on:click.prevent="createComment()">
             </form> -->
+
+            <div class="modal fade" id="certmodal" tabindex="-1" role="dialog" aria-labelledby="AddMember" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <form method="post" v-on:submit.prevent="createComment()">
+                    <div class="modal-header">
+                      <h5 class="modal-title">Add a New Certification</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      <div class="form-row">
+                      <div class="form-group">
+                        <label for="certName">Certificatino Name</label><br>
+                        <input type="text" v-model="newCert.certName" class="form-control" id="certName" placeholder="Enter a certification name" required>
+                      </div>
+                      </div>
+                      <div class="form-row">
+                      <div class="form-group">
+                        <label for="certName">Certification Agency</label><br>
+                        <input type="text" v-model="newCert.certAgency" class="form-control" id="certAgency" placeholder="Enter an agency name" required>
+                      </div>
+                      </div>
+                      <div class="form-row">
+                      <div class="form-group">
+                        <label for="certAgency">Standard Expiry</label><br>
+                        <input type="number" v-model="newCert.standardExpiry" class="form-control" id="certAgency" placeholder="Enter number of years the certifaction is valid" required >
+                      </div>
+                    </div>
+                  </div>
+                    <div class="modal-footer">
+                      <button type="submit" class="btn btn-primary float-right">Create</button>
+                      <button type="button" class="btn btn-default float-right" data-dismiss="modal"> Close</button>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+
           </div>
 
 
