Finish up the form

--- a/app/public/cert.html
+++ b/app/public/cert.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="css\site.css">
   <!-- Vue.js -->
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.min.js"></script>
@@ -38,14 +38,15 @@
   <!-- Header -->
 
   <!-- Main -->
+<div id="certTable">
     <div id="main">
       <div class="container">
         <h2 id="bigheader"> Welcome to the Certification Page</h2>
         <p> In this page, you can see the list of certification of our member have. You can add a certification and edit any information regarding certification.</p>
-      <div id="certTable">
+<br><br>
         <div class="row">
           <div class="col-5">
-            <h4 id="bigheader">Certification List</h4>
+            <h4>Certification List</h4>
             <p>The following are the certifications. Feel free to see which members have or have had a particular certification.</p>
               <!--table-->
             <table class="table" id="dynamicSort">
@@ -64,24 +65,15 @@
                   <!-- <td> {{ cert.certAgency }} </td>
                   <td> {{ cert.standardExpiry }} </td> -->
                   <td><button type="button"  class="btn btn-link">View</button>
-                  <button type="button"  v-on:click="deleteCert(cert)" class="btn btn-outline-danger">Delete</button></td>
+                  <button type="button"  v-on:click.prevent="deleteCert(cert)" class="btn btn-outline-danger">Delete</button></td>
                   <!-- <td> <input v-on:click="deleteComment(cert)" type="submit" value="Delete" class="button"> </td> -->
               </tbody>
             </table>
-            <button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#certmodal" >Add New Certification</button>
-            <!-- <form >
-              <div class="comment">
-                <label for="certName">Enter a name for the certifcate:</label><br>
-                <input type="text" v-model="newCert.certName" class="form-control" id="certName" placeholder="Enter a certification name" >
-                <label for="certAgency">Enter an agency for the certifcate:</label><br>
-                <input type="text" v-model="newCert.certAgency" class="form-control" id="certAgency" placeholder="Enter an agency name" >
-                <label for="certAgency">Enter the number of years the certifaction is valid:</label><br>
-                <input type="number" v-model="newCert.standardExpiry" class="form-control" id="certAgency" placeholder="Enter number of years " >
-              </div><br>
-                <input type="submit" value="Submit" class="button" v-on:click.prevent="createComment()">
-            </form> -->
 
-            <div class="modal fade" id="certmodal" tabindex="-1" role="dialog" aria-labelledby="AddMember" aria-hidden="true">
+            <!--Form Starts-->
+            <button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#certmodal" >Add New Certification</button>
+
+            <div class="modal fade" id="certmodal" tabindex="-1" role="dialog" aria-labelledby="AddCert" aria-hidden="true">
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <form method="post" v-on:submit.prevent="createComment()">
@@ -93,22 +85,16 @@
                     </div>
                     <div class="modal-body">
                       <div class="form-row">
-                      <div class="form-group">
                         <label for="certName">Certificatino Name</label><br>
                         <input type="text" v-model="newCert.certName" class="form-control" id="certName" placeholder="Enter a certification name" required>
                       </div>
-                      </div>
                       <div class="form-row">
-                      <div class="form-group">
                         <label for="certName">Certification Agency</label><br>
                         <input type="text" v-model="newCert.certAgency" class="form-control" id="certAgency" placeholder="Enter an agency name" required>
                       </div>
-                      </div>
                       <div class="form-row">
-                      <div class="form-group">
                         <label for="certAgency">Standard Expiry</label><br>
                         <input type="number" v-model="newCert.standardExpiry" class="form-control" id="certAgency" placeholder="Enter number of years the certifaction is valid" required >
-                      </div>
                     </div>
                   </div>
                     <div class="modal-footer">
@@ -128,7 +114,7 @@
       <div class="col-7">
         <h4> Details</h4>
         <h5>Basic Information</h5>
-        <form method="post" v-on:submit.prevent="updateCert()">
+        <form>
           <div class="form-group row">
             <label class="col-sm-2 col-form-label">Certification Name:</label>
             <div class="col-sm-10">
@@ -144,16 +130,16 @@
           <div class="form-group row">
             <label class="col-sm-2 col-form-label">Standard Expiry:</label>
             <div class="col-sm-10">
-              <input class="form-control" type="text" ref="standardExpiry" :value="selectedCert.standardExpiry" :disabled="!isEditing" :class="{view: !isEditing}" v-model="selectedCert.standardExpiry">
+              <input class="form-control" type="number" ref="standardExpiry" :value="selectedCert.standardExpiry" :disabled="!isEditing" :class="{view: !isEditing}" v-model="selectedCert.standardExpiry">
             </div>
           </div>
           <button type="button" class="btn btn-info" v-on:click.prevent="isEditing = !isEditing" v-if="!isEditing" v-model="selectedCert.certName">
             Edit
           </button>
-          <button type="submit" class="btn btn-info" v-else-if="isEditing">
+          <button method="post" v-on:submit.prevent="updateCert()" type="submit" class="btn btn-info" v-else-if="isEditing">
             Save
           </button>
-            <button type="button" class="btn btn-secondary" v-if="isEditing" v-on:click.prevent="isEditing = false">Cancel</button>
+            <button type="button" class="btn btn-secondary" v-if="isEditing" v-on:click="cancel">Cancel</button>
           </form>
 
         <!-- <br><form>
@@ -163,6 +149,7 @@
           </div><br>
             <input type="submit" value="Submit" class="button">
         </form> -->
+        <br><br>
         <h5>Member</h5>
         <p>Member(s) with this certification is(are): </p>
         <table class="table" >
@@ -207,14 +194,19 @@
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script type="application/javascript" src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script type="application/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <!--Local JS files we can delete table sort if not needed-->
+  <script type="text/javascript" src="js/certs.app.js"></script>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.28.0/moment.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.28.0/moment.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src='js/tablesort.min.js'></script>
   <script src="js/certs.app.js"></script>
   <script>
     //tablesort plugin from https://github.com/tristen/tablesort
     new Tablesort(document.getElementById('bookTable'));
-  </script>
+  </script> -->
 </body>
 </html>
