--- a/app/public/report.html
+++ b/app/public/report.html
@@ -57,10 +57,10 @@
           <div id="stationNumberVue">
             <h4>Filter by Station Number</h4>
             <select v-model="choose.stationNumber">
-                <option value="" selected>All</option>
-                <option v-for='p in person'>{{ p.stationNumber }}</option>
-              </select>
-          <br>
+              <option value="" selected>All</option>
+              <option v-for='p in person'>{{ p.stationNumber }}</option>
+            </select>
+            <br>
 
             <table class="table table-striped" id='stationNumTable'>
               <thead>
@@ -71,7 +71,7 @@
                 </tr>
               </thead>
               <tbody>
-                <tr v-for="p in person"  v-if="choose.stationNumber =='' || choose.stationNumber == p.stationNumber || p.stationNumber == 9999"  >
+                <tr v-for="p in person" v-if="choose.stationNumber =='' || choose.stationNumber == p.stationNumber || p.stationNumber == 9999">
                   <th scope="row">{{ p.stationNumber }}</th>
                   <td> {{ p.firstName }} {{ p.lastName }} </td>
                   <td>{{ p.email }}</td>
@@ -79,7 +79,7 @@
               </tbody>
             </table>
           </div>
-        <button href="#" onclick="download_table_as_csv('stationNumTable');">Download as CSV</button>
+          <button href="#" onclick="download_table_as_csv('stationNumTable');">Download as CSV</button>
         </div>
 
         <div id="radioNumber" class="tabcontent">
@@ -87,10 +87,10 @@
           <div id="radioNumberVue">
             <h4>Filter by Radio Number</h4>
             <select v-model="choose.radioNumber">
-                <option value="" selected>All</option>
-                <option v-for='p in person'>{{ p.radioNumber }}</option>
-              </select>
-          <br>
+              <option value="" selected> All </option>
+              <option v-for='p in person'>{{ p.radioNumber }}</option>
+            </select>
+            <br>
 
             <table class="table table-striped" id='radioNumTable'>
               <thead>
@@ -102,14 +102,14 @@
               </thead>
               <tbody>
                 <tr v-for="p in person" v-if="choose.radioNumber =='' || choose.radioNumber == p.radioNumber">
-                <th scope="row">{{ p.radioNumber }}</th>
-                <td> {{ p.firstName }} {{ p.lastName }} </td>
-                <td>{{ p.email }}</td>
+                  <th scope="row">{{ p.radioNumber }}</th>
+                  <td> {{ p.firstName }} {{ p.lastName }} </td>
+                  <td>{{ p.email }}</td>
                 </tr>
               </tbody>
             </table>
           </div>
-        <button href="#" onclick="download_table_as_csv('radioNumTable');">Download as CSV</button>
+          <button href="#" onclick="download_table_as_csv('radioNumTable');">Download as CSV</button>
         </div>
 
 
@@ -118,29 +118,28 @@
           <div id="expiredVue">
             <h4>Filter by Certification</h4>
             <select v-model="choose.certName">
-                <option value="" selected>All</option>
-                <option v-for='p in person'>{{ p.certName }}</option>
-              </select>
-          <br>
-
+              <option value="" selected>All</option>
+              <option v-for='p in person'> {{ p.certName }} </option>
+            </select>
+            <br>
             <table class="table table-striped" id='expiredCertTable'>
               <thead>
                 <tr>
+                  <th>Certification Name</th>
                   <th>Name</th>
-                  <th>Cert Name</th>
                   <th>Date Expired</th>
                 </tr>
               </thead>
               <tbody>
                 <tr v-for="p in person" v-if="choose.certName =='' || choose.certName == p.certName">
-                <th scope="row">{{ p.firstName }} {{ p.lastName }} </th>
-                <td>{{ p.certName }} </td>
-                <td>{{ p.dateExpired }}</td>
+                  <th scope="row">{{ p.certName }} </th>
+                  <td>{{ p.firstName }} {{ p.lastName }} </td>
+                  <td>{{ p.dateExpired }}</td>
                 </tr>
               </tbody>
             </table>
-        </div>
-        <button href="#" onclick="download_table_as_csv('expiredCertTable');">Download as CSV</button>
+          </div>
+          <button href="#" onclick="download_table_as_csv('expiredCertTable');">Download as CSV</button>
         </div>
       </div>
     </div>
@@ -174,7 +173,7 @@
   <script src='js/report.js'></script>
   <script src='js/report.app.js'></script>
   <script src='js/expcerts.app.js'></script>
-  <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.min.js" ></script>
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
   <script src="js/html2CSV.js"></script>
 </body>
 
